--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+# Dependencies
 node_modules/
+
+# Production build
+build/
+dist/
+
+# Environment variables
+.env
+
+# System files
+.DS_Store
+
+# Coverage reports
+coverage/
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Optional lock files
+# package-lock.json
+# yarn.lock
